--- a/templates/registrar_visitante.html
+++ b/templates/registrar_visitante.html
@@ -1,5 +1,7 @@
 {% extends "base.html"%}
 
+{% load widget_tweaks %}
+
 {% block conteudo %}
 
 <div class="container">
@@ -12,17 +14,26 @@
             <h4 class="mb-3 text-primary">
                 Formulário para registro de novo visitante
             </h4>
+            <p class="mb-5 ml-1 ">
+                <small>
+                    O asterisco (*) indica que o campo é obrigatório
+                </small>
+            </p>
+                <form method="post">
+                    <div class="form-row">
+                        {% csrf_token %}
+                        
+                        {% for field in form%}
+                        
+                            <div class="form-group col-md-12">
+                                <label>{{field.label}} {% if field.field.required %} * {%endif%} </label>
+                                {% render_field field placeholder=field.label class="form-control" %}
+                            </div>
 
-            <form method="post" enctype="multipart/form-data">
-                <div class="form-row">
-                    <p class="ml-2">Aqui deveria ter um formulário</p>
-                </div>
+                        {% endfor%}
+                    </div>
 
-                <div class="text-right">
-                    <button class="btn btn-primary" type="submit">
-                        <span class="text">Registrar visitante</span>
-                    </button>
-                </div>
+                </form>
             </form>
         </div>
     </div>
