implementação de botões

--- a/templates/registrar_visitante.html
+++ b/templates/registrar_visitante.html
@@ -19,6 +19,20 @@
                     O asterisco (*) indica que o campo é obrigatório
                 </small>
             </p>
+            
+            {%if form.errors%}
+                {% for field in form %}
+                    {%if field.errors%}
+                        {%for erro in field.errors%}
+                            <div class="alert alert.warning" role="alert">
+                                {{erro}}
+                            </div>
+                        {%endfor%}
+                    {%endif%}
+                {%endfor%}
+            {%endif%}
+
+
                 <form method="post">
                     <div class="form-row">
                         {% csrf_token %}
@@ -32,7 +46,12 @@
 
                         {% endfor%}
                     </div>
+                    <div class="text-right">
+                        <button class="btn btn-primary" type="submit">
+                            <span class="text"> Registar visitante</span>
+                        </button> 
 
+                    </div>
                 </form>
             </form>
         </div>
