--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,27 @@
 <div class="container-fluid">  
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1 class="h3 mb-0 text-gray-800"></h1>
+
+        <a href="{% url 'registrar_visitante'%}" class="btn btn-primary btn-icon-split btn-sm">
+            <span class="text"> Registrar visitantes </span>
+
+            <span class="icon text-white-50">
+                <i class="fas fa-user-plus"></i>
+            </span>
+        </a>
+
     </div>
+
+    {%if messages%}
+    
+        {% for mensagem in messages%}
+            <div class="alert alert-success" role="alert">
+                {{mensagem}}
+            </div>
+        {%endfor%}
+
+    {% endif%}
+
 
     <div class="row">
         <div class="col-xl-3 col-md-6 mb-4">
@@ -97,10 +117,10 @@
                             <td>{{v.nome_completo}}</td>
                             <td>{{v.cpf}}</td>
                             <td>{{v.horario_chegada}}</td>
-                            <td>{{v.horario_autorizacao}}</td>
-                            <td>{{v.moderador_responsavel}}</td>
+                            <td>{{v.get_horario_autorizacao}}</td>
+                            <td>{{v.get_morador_responsavel}}</td>
                             <td>
-                                <a href="#">
+                                <a href="{% url 'informacoes_visitante' id=v.id %}">
                                     Ver informações
                                 </a>
                             </td>
