--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Visitantes aguardando autorização</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">0</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">{{visitantes_aguardando}}</div>
                         </div>
                         
                         <div class="col-auto">
@@ -50,7 +50,7 @@
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Visitantes no condomínio</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">0</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">{{visitantes_em_visita}}</div>
                         </div>
                         
                         <div class="col-auto">
@@ -67,7 +67,7 @@
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Visitas finalizadas</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">0</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">{{visitantes_finalizado}}</div>
                         </div>
                         <div class="col-auto">
                             <i class="fas fa-user-check fa-2x text-gray-300"></i>
@@ -83,7 +83,7 @@
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Visitantes registrados no mês atual</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">0</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">{{visitantes_mes}}</div>
                         </div>
                         <div class="col-auto">
                             <i class="fas fa-users fa-2x text-gray-300"></i>
@@ -106,6 +106,7 @@
                         <th>Nome completo</th>
                         <th>CPF</th>
                         <th>Horário de chegada</th>
+                        <th>Status</th>
                         <th>Horário da autorização</th>
                         <th>Autorizado por</th>
                         <th>Mais informações</th>
@@ -115,8 +116,9 @@
                         {% for v in todos_visitantes%}
                         <tr>
                             <td>{{v.nome_completo}}</td>
-                            <td>{{v.cpf}}</td>
+                            <td>{{v.get_cpf}}</td>
                             <td>{{v.horario_chegada}}</td>
+                            <td>{{v.get_status_display}}</td>
                             <td>{{v.get_horario_autorizacao}}</td>
                             <td>{{v.get_morador_responsavel}}</td>
                             <td>
