--- a/templates/registrar_visitante.html
+++ b/templates/registrar_visitante.html
@@ -47,6 +47,9 @@
                         {% endfor%}
                     </div>
                     <div class="text-right">
+                        <a href="{% url 'index' %}" class="btn btn-secondary text-white" type="button">
+                            <span class="text">Cancel</span>
+                        </a>
                         <button class="btn btn-primary" type="submit">
                             <span class="text"> Registar visitante</span>
                         </button> 
